2004-01-27  Mo DeJong  <mdejong@users.sourceforge.net>

	* unix/Makefile.in: Add DESTDIR support.

2003-12-30  Mo DeJong  <mdejong@users.sourceforge.net>

	* win/configure: Regen.
	* win/configure.in: Test for lack of SEH support
	in the compiler and check for an alloca function
	that we need to invoke via asm.
	* win/tclWin32Dll.c (TclpCheckStackSpace):
	Check for stack space by invoking an asm
	call to alloca, this is needed since just
	calling alloca does not pass the size argument
	because of a function prototype mismatch in
	Mingw. Also, setup an asm exception handler
	that could be invoked we go over the stack.

2003-12-25  Mo DeJong  <mdejong@users.sourceforge.net>

	* win/configure:
	* win/tcl.m4 (SC_ENABLE_SYMBOLS): Fix last
	update to macro, the Win32 DBGX symbol should
	be d not g.

2003-11-29  Mo DeJong  <mdejong@users.sourceforge.net>

	* unix/configure: Regen.
	* unix/tcl.m4 (SC_ENABLE_SYMBOLS):
	* win/configure: Regen.
	* win/tcl.m4 (SC_ENABLE_SYMBOLS): Update
	macro to support passing --enable-symbols=mem
	on the configure command line.

2003-10-04  Mo DeJong  <mdejong@users.sourceforge.net>

	* win/tclWinPipe.c (BuildCommandLine): Fix bug
	that was caused by a missing space between
	tclpipe.dll and the following arguments.  It caused error
	in Windows 98 when exec command.com (e.g. dir) [Tcl Bug 789040]

2003-09-13  Mo DeJong  <mdejong@users.sourceforge.net>

	Add TCL-PRE-835-MERGE-2003-09-13 tag to
	mark state of tcl package before updating
	to Tcl 8.3.5.

2003-08-10  Mo DeJong  <mdejong@users.sourceforge.net>

	* unix/Makefile.in: Remove invocation of
	autoconf since this is just evil.
	* unix/configure: Regen.
	* unix/tcl.m4 (SC_CONFIG_CFLAGS): If a opt
	option like -O3 was passed in the CFLAGS,
	don't set one in CFLAGS_OPTIMIZE.
	* win/configure: Regen.
	* win/tcl.m4 (SC_CONFIG_CFLAGS): If a opt
	option like -O3 was passed in the CFLAGS,
	don't set one in CFLAGS_OPTIMIZE.

2003-04-07  Mo DeJong  <mdejong@users.sourceforge.net>
