@@ -1,3 +1,12 @@
+2004-02-12  Mo DeJong  <mdejong@users.sourceforge.net>
+
+	* win/tclWinInit.c (AppendEnvironment):
+	Use the tail component of the passed in
+	lib path instead of just blindly using
+	lib+4. That worked when lib was "lib/..."
+	but fails for other values. Thanks go to
+	Patrick Samson for pointing this out.
+
 2004-01-27  Mo DeJong  <mdejong@users.sourceforge.net>
 
 	* unix/Makefile.in: Add DESTDIR support.
